--- a/frontend/assets/css/custom-design.css
+++ b/frontend/assets/css/custom-design.css
@@ -47,3 +47,11 @@
 .text-variable-active {
     color: var(--material-color-blue-100) !important;
 }
+
+div#columns-buttons-holder {
+    min-height: 10em;
+}
+
+.chart-container {
+    min-height: 40em;
+}
